// Copyright 2025 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package content_capture;

option java_package = "org.chromium.components.content_capture";
option java_outer_classname = "ContentCaptureMetadataProto";

option optimize_for = LITE_RUNTIME;

message ContentCaptureMetadata {
  // A score from [0, 1], -1 if not evaluated. Lower score means more sensitive.
  float sensitivity_score = 1;

  // The detected language code.
  string detected_language = 2;

  // A score from [0, 1] of the confidence of the detected language.
  float language_confidence = 3;
}
